# Raytracing

./: .gitignore  README.md  Raytracing.cpp  aa_rect.cpp  aa_rect.hpp  aabb.cpp  aabb.hpp  bmp.cpp  bmp.hpp  box.cpp  box.hpp  bvh.cpp  bvh.hpp  camera.hpp  color.cpp  color.hpp  constant_medium.cpp  constant_medium.hpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  improved_bvh.cpp  improved_bvh.hpp  material.hpp  meson.build  pool.cpp  pool.hpp  ray.hpp  render.cpp  render.hpp  render.ppm  scene.hpp  sphere.cpp  sphere.hpp  util.hpp  vec3.cpp  vec3.hpp
output/: scene2.ppm  scene3.ppm  scene4.ppm
src/: raytracing.cpp
src/acceleration/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  improved_bvh.cpp  improved_bvh.hpp
src/camera/: camera.hpp
src/core/: color.cpp  color.hpp  ray.hpp  vec3.cpp  vec3.hpp
src/geometry/: aa_rect.cpp  aa_rect.hpp  box.cpp  box.hpp  sphere.cpp  sphere.hpp
src/materials/: material.hpp
src/render/: bmp.cpp  bmp.hpp  render.cpp  render.hpp
src/scene/: hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  scene.hpp
src/utils/: pool.cpp  pool.hpp  util.hpp
src/volumes/: constant_medium.cpp  constant_medium.hpp
